# protepilot

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  main.py  package-lock.json  pyproject.toml  pytest.ini  requirements-analysis.txt  requirements-app.txt  requirements-core.txt  requirements-ml.txt  requirements-training.txt  requirements.txt  run_all_checks.py
.streamlit/: config.toml
SelfTest/: benchmark_post_polish.json  benchmark_v32.json  benchmark_v35_ml_vs_heuristic.json  critical_issues_v35.json  governance_checks.py  governance_results.json  governance_v35.json  governance_v36.json  nistmab_results.json  prophet_ab_benchmark_results.json  run_module_selftests.py  run_validation.py  scientific_validation.py  scientific_validation_results.json  scientific_validation_v30.json  scientific_validation_v35.json  scientific_validation_v36.json  validation_results.json
adapters/: proteloop_export.py
benchmarks/: README.md  __init__.py  governance_baseline_v1.json  iedb_validation.py  iedb_validation_results.json  nistmab_benchmark_v1.json  propermab_comparison.py  propermab_comparison_results.json  prophet_ab_benchmark.py  prophet_ab_benchmark_results.json
config/: platform_constants_reference.yaml
data/: Jain137_Cleaned_Training_Data.csv  README.md  TheraSAbDab_SeqStruc_OnlineDownload.csv  batch_experiments.csv  design_space_data.npz  empower_peak_results.txt  empower_results.json  merged_wetlab_training.csv  merged_xgb_training.csv  prophet_ab_predictions.tsv  unified_training_data.csv
(+213 files in other folders)
